update test notebook

--- a/test_tree_splaner_classifer.ipynb
+++ b/test_tree_splaner_classifer.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c30ca753-21df-4e31-9fa0-c9ec549a1cfb",
    "metadata": {},
    "outputs": [
@@ -427,7 +427,7 @@
        "DecisionTreeClassifier(max_depth=3, random_state=42)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,6 +446,27 @@
     "# Train a Decision Tree Classifier\n",
     "clf = DecisionTreeClassifier(max_depth=3, random_state=42)\n",
     "clf.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "08f7246f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data.data)"
    ]
   },
   {
